<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PdfViewActivity">

    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/appbar_pdf"/>

    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/webview"
        android:visibility="gone"

        app:layout_constraintTop_toBottomOf="@+id/appbar_pdf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
    </WebView>
    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/webview_default"
        android:visibility="gone"

        app:layout_constraintTop_toBottomOf="@+id/appbar_pdf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
    </WebView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginVertical="@dimen/dimen_30"

        app:layout_constraintTop_toBottomOf="@+id/appbar_pdf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_page_no"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/page_sheet_no"
            android:layout_marginHorizontal="10dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_page_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_snake_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/snake_id"
            android:layout_marginHorizontal="10dp"

            app:layout_constraintTop_toBottomOf="@+id/text_page_no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_snake_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/linear_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="@dimen/dimen_5"
            app:layout_constraintTop_toBottomOf="@+id/text_snake_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <TextView
                android:id="@+id/text_start"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_50"
                android:layout_weight="1"
                android:text="@string/start_date"
                android:onClick="OnPickStart"
                android:background="@drawable/border_input"
                android:gravity="center"
                android:textSize="@dimen/dimen_15"
                android:textStyle="bold"
                android:paddingVertical="@dimen/dimen_5"/>

            <TextView
                android:id="@+id/text_end"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_50"
                android:layout_weight="1"
                android:text="@string/end_date"
                android:onClick="OnPickEnd"
                android:background="@drawable/border_input"
                android:gravity="center"
                android:textSize="@dimen/dimen_15"
                android:textStyle="bold"
                android:paddingVertical="@dimen/dimen_5"/>

        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="@dimen/dimen_5"
            app:layout_constraintTop_toBottomOf="@+id/linear_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/is_new_snake"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linear_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintTop_toBottomOf="@+id/constraint_input"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="@dimen/dimen_30"
        >
        <Button
            android:id="@+id/btn_view_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regular"
            android:onClick="OnViewRegular"
            android:textAllCaps="false"
            android:layout_margin="@dimen/dimen_10"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btn_view_occ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/occasional"
            android:onClick="OnViewOccasional"
            android:textAllCaps="false"
            android:layout_margin="@dimen/dimen_10"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        >
        <Button
            android:id="@+id/btn_view_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:onClick="OnViewBack"
            android:visibility="gone"
            android:textAllCaps="false"
            android:layout_margin="@dimen/dimen_10"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btn_view_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:onClick="CreatePdf"
            android:visibility="gone"
            android:textAllCaps="false"
            android:layout_margin="@dimen/dimen_10"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_pdf"
        android:onClick="CreatePdf"
        android:visibility="gone"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>