<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_green"

            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"

                >
                <RelativeLayout
                    android:id="@+id/relative_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dimen_50"
                    android:paddingBottom="@dimen/dimen_30"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <ImageView
                        android:id="@+id/img_doc_login"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dimen_90"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:background="@android:color/transparent"
                        android:src="@drawable/logo_vrc"
                        android:importantForAccessibility="no" />
                    <TextView
                        android:id="@+id/text_wel_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dimen_25"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_below="@+id/img_doc_login"
                        />

                    <TextView
                        android:id="@+id/text_reg_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_below="@+id/text_wel_login"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/dimen_20"
                        android:text="@string/login_to_continue"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dimen_22"
                        android:textStyle="bold"
                        app:drawableRightCompat="@drawable/ic_arrow_forward" />
                </RelativeLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/solid_stoke"
                    android:paddingVertical="@dimen/dimen_20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/relative_reg">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_name_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_username"
                        android:layout_marginHorizontal="@dimen/dimen_5"
                        android:layout_marginTop="@dimen/dimen_10"
                        app:layout_constraintTop_toTopOf="parent"
                        android:visibility="gone"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_user_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_phn_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="11"
                        android:hint="@string/enter_phn_num"
                        app:layout_constraintTop_toBottomOf="@+id/text_name_layout"
                        android:layout_marginHorizontal="@dimen/dimen_5"
                        android:layout_marginTop="@dimen/dimen_10" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_phn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_password_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        app:passwordToggleEnabled="true"
                        app:layout_constraintTop_toBottomOf="@+id/text_phn_layout"
                        android:layout_marginHorizontal="@dimen/dimen_5">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_confirm_password_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_confirm_password"
                        android:visibility="gone"
                        app:passwordToggleEnabled="true"
                        app:layout_constraintTop_toBottomOf="@+id/text_password_layout"
                        android:layout_marginHorizontal="@dimen/dimen_5"
                        android:layout_marginTop="@dimen/dimen_10"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_confirm_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            />

                    </com.google.android.material.textfield.TextInputLayout>



                    <RelativeLayout
                        android:id="@+id/linear_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf ="@+id/text_confirm_password_layout"
                        android:layout_marginHorizontal="@dimen/dimen_5"
                        android:layout_marginTop="@dimen/dimen_50"
                        >

                        <TextView
                            android:id="@+id/text_reg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:text="@string/already_have_acc"
                            android:paddingVertical="@dimen/dimen_5"
                            android:textSize="@dimen/dimen_16"
                            android:gravity="end"
                            android:paddingHorizontal="@dimen/dimen_20"
                            android:textColor="@color/dark_green"
                            android:visibility="gone"
                            />

                        <TextView
                            android:id="@+id/text_reg_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/text_reg"
                            android:text="@string/registration"
                            android:textColor="@color/white"
                            android:textSize="@dimen/dimen_20"
                            android:gravity="center"
                            android:background="@drawable/btn_radius"
                            android:paddingVertical="@dimen/dimen_10"
                            android:layout_marginHorizontal="@dimen/dimen_10"
                            android:visibility="gone"
                            />

                        <TextView
                            android:id="@+id/text_login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:text="@string/create_new_acc"
                            android:paddingVertical="@dimen/dimen_5"
                            android:textSize="@dimen/dimen_16"
                            android:gravity="end"
                            android:paddingHorizontal="@dimen/dimen_20"
                            android:textColor="@color/dark_green"
                            />

                        <TextView
                            android:id="@+id/text_login_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/text_login"
                            android:layout_marginHorizontal="@dimen/dimen_10"
                            android:layout_marginTop="-1dp"
                            android:background="@drawable/btn_radius"
                            android:gravity="center"
                            android:paddingVertical="@dimen/dimen_10"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:textSize="@dimen/dimen_20" />
                    </RelativeLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>